--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -1,11 +1,14 @@
 .container-products {
     border: 1px solid #95A0A7;
     border-radius: 10px;
+    position: relative;
+}
+.card-body{
     padding: 10px;
 }
-
 .card-img{
     width: 290px;
+    height: 290px;
     /* display: block;
     margin-left: auto;
     margin-right: auto; */
@@ -15,11 +18,55 @@
     width: 290px;
     font-family: Lato;
     font-size: 21px;
-    font-weight: 400;
+    font-weight: 700;
     line-height: 25px;
     text-align: left;
     color:#0E161A;
+    margin-top: 20px;
+    margin-bottom: 5px;
 }
 .card-price{
     color: #0E161A;
+    margin-bottom: 30px;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 20px;
+}
+.container-products p{
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.004em;
+    color: #2A414F;
+    
+    
+}
+.card-rating{
+    padding-bottom: 30px;
+}
+.card-button{
+    width: 100%;
+    text-align: center;
+    background: #FFE0B3;
+    border: 0;
+    border-radius: 0px 0px 8px 8px;
+    position: absolute;
+    bottom: 0;
+    margin-top: 40px;
+}
+.card-button:hover{
+    background-color: orangered;
+}
+.card-button p{
+    font-family: 'Lato';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 18px;
+        letter-spacing: 0.0125em;
+        color: #0E161A;
 }
