--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -4,9 +4,9 @@
     height: 100%;
     width: auto;
     text-align: center;
-    /* position: fixed;
-    right: 0;
-    border: 1px solid black; */
+    position: sticky;
+    top: 0;
+    
 
 }
 
